# paint-by-number

./: .pre-commit-config.yaml  README  README.md  pyproject.toml
src/paint_by_number/: README.md  app.py  utils.py
